force-app/main/default/objects/Product_Initiative__c/Product_Initiative__c.object-meta.xml
<CustomObject>
    <label>製品施策</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>施策番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>製品施策</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>