force-app/main/default/objects/Product_Initiative__c/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <label>アプローチ (How)</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>