force-app/main/default/objects/Product_Initiative__c/fields/Decision_Note__c.field-meta.xml
<CustomField>
    <fullName>Decision_Note__c</fullName>
    <label>判断理由</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>