force-app/main/default/objects/Product_Initiative__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <label>見込みコスト</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>