force-app/main/default/objects/Product_Initiative__c/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <label>見込み売上</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>