force-app/main/default/objects/Product_Initiative__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>対象製品</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>製品施策</relationshipLabel>
    <relationshipName>Product_Initiatives</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>