force-app/main/default/objects/Product_Initiative__c/fields/Target_Customer__c.field-meta.xml
<CustomField>
    <fullName>Target_Customer__c</fullName>
    <label>ターゲット顧客像 (Who)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>