force-app/main/default/objects/Product_Initiative__c/fields/Target_Industry__c.field-meta.xml
<CustomField>
    <fullName>Target_Industry__c</fullName>
    <label>ターゲット業種</label>
    <type>Text</type>
    <length>255</length>
</CustomField>