force-app/main/default/objects/Product_Initiative__c/fields/Target_Release__c.field-meta.xml
<CustomField>
    <fullName>Target_Release__c</fullName>
    <label>リリース目標日</label>
    <type>Date</type>
</CustomField>