force-app/main/default/objects/Product_Initiative__c/fields/Target_Start__c.field-meta.xml
<CustomField>
    <fullName>Target_Start__c</fullName>
    <label>着手目標日</label>
    <type>Date</type>
</CustomField>