force-app/main/default/objects/Product_Initiative__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>施策タイトル</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>