force-app/main/default/objects/Product_Initiative__c/fields/What_Description__c.field-meta.xml
<CustomField>
    <fullName>What_Description__c</fullName>
    <label>何をするか (What)</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>