force-app/main/default/objects/Product_Initiative__c/fields/Why_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Why_Rationale__c</fullName>
    <label>なぜやるか (Why)</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>